--- a/djscr/main/templates/index.html
+++ b/djscr/main/templates/index.html
@@ -41,6 +41,7 @@
                                 <p>Автор: ${data.author}</p>
                                 <p>Число публикаций в РИНЦ: ${data.publication_count}</p>
                                 <p>Индекс Хирша: ${data.hirsh}</p>
+                                <p>Число статей в российских журналах из перечня ВАК: ${data.vac}</p>
                             `;
                         }
                     })
